--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "start": "tsc main.ts && node main.js --experimental-modules --loader ./system/customLoader.mjs",
     "test": "mocha",
-    "build": "tsc main.ts",
+    "build": "tsc --p tsconfig.json",
     "tsc": "tsc"
   },
   "author": "",
