--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "main.js",
   "directories": {
-    "test": "test"
+    "test": "source/test"
   },
   "dependencies": {
     "jshint": "^2.10.2"
@@ -15,7 +15,7 @@
     "typescript": "^3.4.5"
   },
   "scripts": {
-    "start": "tsc main.ts && node main.js --experimental-modules --loader ./system/customLoader.mjs",
+    "start": "tsc source/main.ts && node main.js --experimental-modules --loader source/system/customLoader.mjs",
     "test": "mocha",
     "build": "tsc --p tsconfig.json",
     "lint": "tslint -p tsconfig.json"
