--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "target": "ES5",
     "outDir": "./build",
-    "rootDir": "./source"
+    "rootDir": "./"
   },
   "include": [
     "./**/*"
