--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "scripts": {
     "start": "tsc Source/main.ts && node main.js --experimental-modules --loader Source/system/customLoader.mjs",
-    "test": "mocha -r ts-node/register 'Test/**/*.ts'",
+    "test": "mocha --exit -r ts-node/register 'Test/**/*.ts'",
     "build": "tsc --p tsconfig.json",
     "lint": "tslint -p tsconfig.json",
     "tslint": "tslint './{Source,Test}/**/*.ts'",
