--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mocha": "^6.1.4"
   },
   "devDependencies": {
+    "nyc": "^15.0.0",
     "onchange": "^6.1.0",
     "prettier": "1.19.1",
     "ts-node": "^8.1.0",
